--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <App></App>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUWDnpg2bQocr2xEhIPRKe_c02Fz1oYJM&libraries=places"
+    <script src="https://maps.googleapis.com/maps/api/js?key=&libraries=places"
             type="text/javascript"></script>
     <script src="./google-map.js"></script>
     <script src="./main.js"></script>
